image added with some first text

--- a/index_old.html
+++ b/index_old.html
@@ -120,14 +120,14 @@
     <!-- Main content -->
     <div class="main-content">
         <!-- Header Image -->
-        <img src="Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image">
+        <img src="Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 5cm; height: 7cm;">
         
         <h1>Your Academic Profile</h1>
 
         <!-- Research Section -->
         <div id="research" class="section">
             <h2>Research</h2>
-            <p>Here you can describe your research interests, ongoing projects, and publications related to your academic work.</p>
+            <p>I'm a cognitive neuroscienists and AI researcher at the Ecole Normale Supérieure (ENS) in Paris. My research aims to identify the neural mechanisms underlying language processing in humans and neural models. </p>
         </div>
 
         <!-- Teaching Section -->
