attempt to fix for mobiles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Main content -->
     <div class="main-content">
         <!-- Header Image -->
-        <img src="images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image">
+        <img src="images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 5cm; height: 7cm;">
 
         <h1>Your Academic Profile</h1>
 
