simplified version, e.g., removing publications and just linking to scholar

--- a/sections/publications.html
+++ b/sections/publications.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="sidebar">
-        <h2>Your Name</h2>
+        <h2>Yair Lakretz</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="cv.html">Curriculum Vitae</a></li>
+            
         </ul>
     </div>
 
@@ -27,11 +27,6 @@
         <p>For a complete and up-to-date list of publications visit my <a href="https://scholar.google.co.il/citations?user=cNnJ5YUAAAAJ&hl=fr" target="_blank" rel="noopener noreferrer">Google Scholar profile</a>.</p>
         </section>
 
-	<a href="https://scholar.google.com/citations?user=cNnJ5YUAAAAJ&hl" target="_blank">
-	    <img src="https://scholar.google.com/citations?view_op=medium_photo&user=cNnJ5YUAAAAJ&hl" alt="Google Scholar Profile" width="95" height="120"/>
-        </a>
-
-	<br>
 	<br>
         <section class="publications">
     <h3>List of Publications</h3>
