--- a/sections/research.html
+++ b/sections/research.html
@@ -3,25 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research | Your Academic Profile</title>
+    <title>Research</title>
     <link rel="stylesheet" href="../styles.css">  <!-- Link to the common CSS file -->
 </head>
 <body>
     <div class="sidebar">
-        <h2>Your Name</h2>
+        <h2>Yair Lakretz</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="research.html">Research</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="cv.html">Curriculum Vitae</a></li>
         </ul>
     </div>
 
     <div class="main-content">
-        <h1>Research</h1>
-        <p>This section will describe your research work, projects, and publications.</p>
+        <h1>Research: Linking Linguistic Theory and Brain Dynamics with Deep Neural Models</h1>
+        
+        
+        <p> We study how various aspects of language - phonology, orthography, syntax and semantics - are neurally encoded in the human brain. 
+        </p>
+        <h2>Click on the different parts of the image below to navigate:</h2>
+
+	    <!-- Define the image map -->
+	    <div class="center-image">
+	    <img src="../images/research.png" usemap="#image-map" alt="Interactive Image">
+	    </div>
+
+	    <!-- Create the map with different clickable areas -->
+	    <map name="image-map">
+		<!-- Define clickable areas with coordinates -->
+		<area shape="rect" coords="34,44,270,350" alt="Project 1" href="project1.html" />
+		<area shape="circle" coords="400,150,60" alt="Project 2" href="project2.html" />
+		<area shape="poly" coords="500,200,550,250,600,250,650,200" alt="Project 3" href="project3.html" />
+	    </map>
+
+		
         <footer>
             <p>&copy; 2024 Yair Lakretz | LSCP, Ecole Normale Supérieure, Paris</p>
         </footer>
