--- a/sections/contact.html
+++ b/sections/contact.html
@@ -8,14 +8,13 @@
 </head>
 <body>
     <div class="sidebar">
-        <h2>Your Name</h2>
+    <img src="../images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 5cm; height: 7cm;">
+        <h2>Yair Lakretz</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
+            <li><a href="https://scholar.google.co.il/citations?user=cNnJ5YUAAAAJ&hl=fr">Publications</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="cv.html">Curriculum Vitae</a></li>
         </ul>
     </div>
 
