simplified version, e.g., removing publications and just linking to scholar

--- a/sections/contact.html
+++ b/sections/contact.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="sidebar">
-    <img src="../images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 5cm; height: 7cm;">
+    <img src="../images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 4.5cm; height: 7cm;">
         <h2>Yair Lakretz</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="https://scholar.google.co.il/citations?user=cNnJ5YUAAAAJ&hl=fr">Publications</a></li>
+            <li><a href="https://scholar.google.co.il/citations?user=cNnJ5YUAAAAJ&hl">Publications</a></li>
             <li><a href="teaching.html">Teaching</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
