--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-    <img src="images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 5cm; height: 7cm;">
+    <img src="images/Yair_Lakretz.jpg" alt="Your Academic Profile" class="header-image" style="width: 4.5cm; height: 7cm;">
         <h2>Yair Lakretz</h2>
         <ul>
-            <li><a href="https://scholar.google.co.il/citations?user=cNnJ5YUAAAAJ&hl=fr">Publications</a></li>
+            <li><a href="https://scholar.google.co.il/citations?user=cNnJ5YUAAAAJ&hl">Publications</a></li>
             <li><a href="sections/teaching.html">Teaching</a></li>
             <li><a href="sections/contact.html">Contact</a></li>
         </ul>
