--- a/sections/prairie_phd_call.html
+++ b/sections/prairie_phd_call.html
@@ -60,6 +60,7 @@
 <body>
     <h1>Emulating Human Thought: Dual-Route Processing in AI</h1>
     <p><strong>Advisors:</strong> Yair LAKRETZ, Salvador MASCARENHAS</p>
+    <p><strong>Framework:</strong> This PhD thesis will be conducted within the PR[AI]RIE-PSAI research program.</p>
 
     <div id="application-details">
         <h2>Application Details</h2>
