Fix formatting issues in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <br>
         <p>I am a CNRS Research Scientist at the <a href="https://lscp.dec.ens.fr/en">Laboratoire de Sciences Cognitives et Psycholinguistique (LSCP)</a> in Paris, where I head the Computational Linking of Minds and Brains (CLiMB) team. I'm also a fellow of the Paris Artificial Intelligence Research Institute: <a href="https://prairie-institute.fr/chairs/lakretz-yair/">My PR[AI]RIE Profile</a>.</p>
         
-        <p>My research focuses on elucidating the **neural mechanisms underlying language processing**, particularly how the **human brain** and **artificial intelligence systems** encode and compute complex linguistic structures, spanning from **phonology** (how phonemes bind into syllables and words) and **orthography** (how letter positions bind to letter identity) to **syntax** and **semantics**. I investigate these questions by combining the analysis of **neural models (AI)** with empirical studies on humans, utilizing advanced neuroimaging techniques including **fMRI**, **E/MEG**, and **intracranial recordings**.</p>
+        <p>My research focuses on elucidating the neural mechanisms underlying language processing, particularly how the human brain and artificial intelligence systems encode and compute complex linguistic structures, spanning from phonology (how phonemes bind into syllables and words) and orthography (how letter positions bind to letter identity) to syntax and semantics. I investigate these questions by combining the analysis of neural models (AI) with empirical studies on humans, utilizing advanced neuroimaging techniques including fMRI, E/MEG, and intracranial recordings.</p>
         
 	        <div class="center-image">
 	    <img src="images/research.png" usemap="#image-map" alt="Interactive Image">
